<resources>
    <string name="app_name">TicketBuy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_cafeteria">Cafeteria</string>
    <string name="menu_register">Register</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_transactions">Transactions</string>


    <string name="card_type_prompt">Card Type</string>

    <string name="menu_performances">Performances</string>

</resources>