<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cafeteria"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cafeteria" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_performances"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_performances"/>
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/menu_tickets" />
    </group>
</menu>