<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.feup.cpm.ticketbuy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_cafeteria"
        android:name="com.feup.cpm.ticketbuy.ui.cafeteria.CafeteriaFragment"
        android:label="@string/menu_cafeteria"
        tools:layout="@layout/fragment_cafeteria" />
    <fragment
        android:id="@+id/nav_register"
        android:name="com.feup.cpm.ticketbuy.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/nav_tickets"
        android:name="com.feup.cpm.ticketbuy.ui.tickets.TicketsFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_tickets" />
    <fragment
        android:id="@+id/nav_performances"
        android:name="com.feup.cpm.ticketbuy.ui.performances.PerformancesFragment"
        android:label="@string/menu_performances"
        tools:layout="@layout/fragment_performances" />
    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.feup.cpm.ticketbuy.ui.transaction.TransactionFrangment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transaction" />
</navigation>